# deepleap

./: .dockerignore  .gitignore  404.html  :  CAP001_2000.fasta  Dockerfile  LICENSE.md  README.md  debug.md  getting_started.md.old  index.html  main.nf  mkdocs.yml  modules.json  nextflow run .sh  nextflow.config  nextflow_schema.json  package-lock.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
assets/: demoCommand.yml
conf/: modules.config  publish.config  test.config
docs/: containerization.md.old  index.md  index.md.old  installation.md  overview.md  usage.md
docs/developer-guide/: architecture.md  containerization.md  contributing.md  pipeline-modules.md
docs/reference/: aligners.md  outputs.md  parameters.md  samplesheet.md
docs/user-guide/: frontend.md  installation.md  running-cli.md
frontend/: .dockerignore  Dockerfile  README.md  config.toml  config_v2.toml  docker-compose.yml  justfile  pipeline_config.toml  pyproject.toml
frontend/frontend/: components.py  config.py  db.py  main.py  models.py  objects.py  page_create_run.py  page_pipeline_run_info.py  page_view_runs.py  params.py  runner.py  widget_factory.py
frontend/src/: dataclasses.py  gui.py  main.py  params.py
getting_started/: index.html
installation/: index.html
llm_plans/: 20260708_PlannedAddititons.md  nf-test-adoption-plan.md  pipeline-improvements-2026-07.md
overview/: index.html
sample_data/: hxb2_env.fasta  hxb2_ref.fasta  samplesheet.csv  samplesheet_grouped.csv
sample_data/input/: sample_a.fasta  (+1 more)
search/: search_index.json
test_data/: hiv1_env_reference_panel_2023.fasta  samplesheet.csv
workflows/: pipeline.nf
(+161 files in other folders)
